--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "devDependencies": {
     "cypress": "^5.0.0",
     "cypress-multi-reporters": "^1.2.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "minimist": ">=1.2.2",
     "mocha": "^7.0.1",
     "mochawesome": "^4.1.0",
     "mochawesome-merge": "^4.0.0",
     "mochawesome-report-generator": "^4.1.0",
+    "prettier": "^2.3.2",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0"
   }
